--- a/ABC_ltd.ipynb
+++ b/ABC_ltd.ipynb
@@ -2,6 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 1,
    "id": "1eeb3e5c-564e-4693-be6f-cceba483e49f",
    "metadata": {
     "ExecuteTime": {
@@ -9,6 +10,85 @@
      "start_time": "2025-11-04T13:20:05.734072Z"
     }
    },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Commission per Agent\n",
+      "Agent Code\n",
+      "A001    5.392281\n",
+      "A002    7.242443\n",
+      "A003    6.648550\n",
+      "A004    9.942113\n",
+      "Name: Commission, dtype: float64\n",
+      "\n",
+      "Commission per Product Category\n",
+      "Product Category\n",
+      "Drinks         8.663092\n",
+      "Frozen Food    9.967784\n",
+      "Fruit          6.754782\n",
+      "Other Food     5.780321\n",
+      "Name: Commission, dtype: float64\n",
+      "\n",
+      "Number of Sales per Agent\n",
+      "Agent Code\n",
+      "A001    12644\n",
+      "A002    12902\n",
+      "A003    12898\n",
+      "A004    12870\n",
+      "Name: Agent Code, dtype: int64\n",
+      "\n",
+      "Number of Sales per Product\n",
+      "Product Category\n",
+      "Drinks         17622\n",
+      "Frozen Food     3042\n",
+      "Fruit          15578\n",
+      "Other Food     15072\n",
+      "Name: Product Category, dtype: int64\n",
+      "\n",
+      "A matrix of the number of sales per agent per product category\n",
+      "Agent Code  Product Category\n",
+      "A001        Drinks              4380\n",
+      "            Frozen Food          732\n",
+      "            Fruit               3869\n",
+      "            Other Food          3663\n",
+      "A002        Drinks              4344\n",
+      "            Frozen Food          775\n",
+      "            Fruit               3977\n",
+      "            Other Food          3806\n",
+      "A003        Drinks              4438\n",
+      "            Frozen Food          778\n",
+      "            Fruit               3882\n",
+      "            Other Food          3800\n",
+      "A004        Drinks              4460\n",
+      "            Frozen Food          757\n",
+      "            Fruit               3850\n",
+      "            Other Food          3803\n",
+      "Name: Transaction ID, dtype: int64\n",
+      "\n",
+      "A matrix of the commission value sales per agent per product category.\n",
+      "Agent Code  Product Category\n",
+      "A001        Drinks               5.160959\n",
+      "            Frozen Food         15.000000\n",
+      "            Fruit                5.201086\n",
+      "            Other Food           3.950860\n",
+      "A002        Drinks               9.000000\n",
+      "            Frozen Food         15.000000\n",
+      "            Fruit                5.000000\n",
+      "            Other Food           6.000000\n",
+      "A003        Drinks               9.441190\n",
+      "            Frozen Food          7.000000\n",
+      "            Fruit                4.899021\n",
+      "            Other Food           5.102368\n",
+      "A004        Drinks              11.000000\n",
+      "            Frozen Food          3.000000\n",
+      "            Fruit               12.000000\n",
+      "            Other Food           8.000000\n",
+      "Name: Commission, dtype: float64\n"
+     ]
+    }
+   ],
    "source": [
     "from __future__ import annotations\n",
     "import pandas as pd\n",
@@ -137,25 +217,7 @@
     "print(\"A matrix of the commission value sales per agent per product category.\")\n",
     "# As in your code, this is the mean commission RATE (%), not a money value\n",
     "print(df.groupby([\"Agent Code\",\"Product Category\"])[\"Commission\"].mean())\n"
-   ],
-   "outputs": [
-    {
-     "ename": "FileNotFoundError",
-     "evalue": "[Errno 2] No such file or directory: 'Test Data.xlsx'",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[1;31mFileNotFoundError\u001B[0m                         Traceback (most recent call last)",
-      "Cell \u001B[1;32mIn[1], line 7\u001B[0m\n\u001B[0;32m      5\u001B[0m \u001B[38;5;66;03m# --- Load data ---\u001B[39;00m\n\u001B[0;32m      6\u001B[0m xlsx_path \u001B[38;5;241m=\u001B[39m \u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mTest Data.xlsx\u001B[39m\u001B[38;5;124m\"\u001B[39m  \u001B[38;5;66;03m# change path if needed\u001B[39;00m\n\u001B[1;32m----> 7\u001B[0m sales  \u001B[38;5;241m=\u001B[39m pd\u001B[38;5;241m.\u001B[39mread_excel(xlsx_path, sheet_name\u001B[38;5;241m=\u001B[39m\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mSales\u001B[39m\u001B[38;5;124m\"\u001B[39m)\n\u001B[0;32m      8\u001B[0m agents \u001B[38;5;241m=\u001B[39m pd\u001B[38;5;241m.\u001B[39mread_excel(xlsx_path, sheet_name\u001B[38;5;241m=\u001B[39m\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mAgent Commission in \u001B[39m\u001B[38;5;124m%\u001B[39m\u001B[38;5;124m\"\u001B[39m)\n\u001B[0;32m      9\u001B[0m prod   \u001B[38;5;241m=\u001B[39m pd\u001B[38;5;241m.\u001B[39mread_excel(xlsx_path, sheet_name\u001B[38;5;241m=\u001B[39m\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mProduct Info\u001B[39m\u001B[38;5;124m\"\u001B[39m)\n",
-      "File \u001B[1;32m~\\anaconda3\\Lib\\site-packages\\pandas\\io\\excel\\_base.py:504\u001B[0m, in \u001B[0;36mread_excel\u001B[1;34m(io, sheet_name, header, names, index_col, usecols, dtype, engine, converters, true_values, false_values, skiprows, nrows, na_values, keep_default_na, na_filter, verbose, parse_dates, date_parser, date_format, thousands, decimal, comment, skipfooter, storage_options, dtype_backend, engine_kwargs)\u001B[0m\n\u001B[0;32m    502\u001B[0m \u001B[38;5;28;01mif\u001B[39;00m \u001B[38;5;129;01mnot\u001B[39;00m \u001B[38;5;28misinstance\u001B[39m(io, ExcelFile):\n\u001B[0;32m    503\u001B[0m     should_close \u001B[38;5;241m=\u001B[39m \u001B[38;5;28;01mTrue\u001B[39;00m\n\u001B[1;32m--> 504\u001B[0m     io \u001B[38;5;241m=\u001B[39m ExcelFile(\n\u001B[0;32m    505\u001B[0m         io,\n\u001B[0;32m    506\u001B[0m         storage_options\u001B[38;5;241m=\u001B[39mstorage_options,\n\u001B[0;32m    507\u001B[0m         engine\u001B[38;5;241m=\u001B[39mengine,\n\u001B[0;32m    508\u001B[0m         engine_kwargs\u001B[38;5;241m=\u001B[39mengine_kwargs,\n\u001B[0;32m    509\u001B[0m     )\n\u001B[0;32m    510\u001B[0m \u001B[38;5;28;01melif\u001B[39;00m engine \u001B[38;5;129;01mand\u001B[39;00m engine \u001B[38;5;241m!=\u001B[39m io\u001B[38;5;241m.\u001B[39mengine:\n\u001B[0;32m    511\u001B[0m     \u001B[38;5;28;01mraise\u001B[39;00m \u001B[38;5;167;01mValueError\u001B[39;00m(\n\u001B[0;32m    512\u001B[0m         \u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mEngine should not be specified when passing \u001B[39m\u001B[38;5;124m\"\u001B[39m\n\u001B[0;32m    513\u001B[0m         \u001B[38;5;124m\"\u001B[39m\u001B[38;5;124man ExcelFile - ExcelFile already has the engine set\u001B[39m\u001B[38;5;124m\"\u001B[39m\n\u001B[0;32m    514\u001B[0m     )\n",
-      "File \u001B[1;32m~\\anaconda3\\Lib\\site-packages\\pandas\\io\\excel\\_base.py:1563\u001B[0m, in \u001B[0;36mExcelFile.__init__\u001B[1;34m(self, path_or_buffer, engine, storage_options, engine_kwargs)\u001B[0m\n\u001B[0;32m   1561\u001B[0m     ext \u001B[38;5;241m=\u001B[39m \u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mxls\u001B[39m\u001B[38;5;124m\"\u001B[39m\n\u001B[0;32m   1562\u001B[0m \u001B[38;5;28;01melse\u001B[39;00m:\n\u001B[1;32m-> 1563\u001B[0m     ext \u001B[38;5;241m=\u001B[39m inspect_excel_format(\n\u001B[0;32m   1564\u001B[0m         content_or_path\u001B[38;5;241m=\u001B[39mpath_or_buffer, storage_options\u001B[38;5;241m=\u001B[39mstorage_options\n\u001B[0;32m   1565\u001B[0m     )\n\u001B[0;32m   1566\u001B[0m     \u001B[38;5;28;01mif\u001B[39;00m ext \u001B[38;5;129;01mis\u001B[39;00m \u001B[38;5;28;01mNone\u001B[39;00m:\n\u001B[0;32m   1567\u001B[0m         \u001B[38;5;28;01mraise\u001B[39;00m \u001B[38;5;167;01mValueError\u001B[39;00m(\n\u001B[0;32m   1568\u001B[0m             \u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mExcel file format cannot be determined, you must specify \u001B[39m\u001B[38;5;124m\"\u001B[39m\n\u001B[0;32m   1569\u001B[0m             \u001B[38;5;124m\"\u001B[39m\u001B[38;5;124man engine manually.\u001B[39m\u001B[38;5;124m\"\u001B[39m\n\u001B[0;32m   1570\u001B[0m         )\n",
-      "File \u001B[1;32m~\\anaconda3\\Lib\\site-packages\\pandas\\io\\excel\\_base.py:1419\u001B[0m, in \u001B[0;36minspect_excel_format\u001B[1;34m(content_or_path, storage_options)\u001B[0m\n\u001B[0;32m   1416\u001B[0m \u001B[38;5;28;01mif\u001B[39;00m \u001B[38;5;28misinstance\u001B[39m(content_or_path, \u001B[38;5;28mbytes\u001B[39m):\n\u001B[0;32m   1417\u001B[0m     content_or_path \u001B[38;5;241m=\u001B[39m BytesIO(content_or_path)\n\u001B[1;32m-> 1419\u001B[0m \u001B[38;5;28;01mwith\u001B[39;00m get_handle(\n\u001B[0;32m   1420\u001B[0m     content_or_path, \u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mrb\u001B[39m\u001B[38;5;124m\"\u001B[39m, storage_options\u001B[38;5;241m=\u001B[39mstorage_options, is_text\u001B[38;5;241m=\u001B[39m\u001B[38;5;28;01mFalse\u001B[39;00m\n\u001B[0;32m   1421\u001B[0m ) \u001B[38;5;28;01mas\u001B[39;00m handle:\n\u001B[0;32m   1422\u001B[0m     stream \u001B[38;5;241m=\u001B[39m handle\u001B[38;5;241m.\u001B[39mhandle\n\u001B[0;32m   1423\u001B[0m     stream\u001B[38;5;241m.\u001B[39mseek(\u001B[38;5;241m0\u001B[39m)\n",
-      "File \u001B[1;32m~\\anaconda3\\Lib\\site-packages\\pandas\\io\\common.py:872\u001B[0m, in \u001B[0;36mget_handle\u001B[1;34m(path_or_buf, mode, encoding, compression, memory_map, is_text, errors, storage_options)\u001B[0m\n\u001B[0;32m    863\u001B[0m         handle \u001B[38;5;241m=\u001B[39m \u001B[38;5;28mopen\u001B[39m(\n\u001B[0;32m    864\u001B[0m             handle,\n\u001B[0;32m    865\u001B[0m             ioargs\u001B[38;5;241m.\u001B[39mmode,\n\u001B[1;32m   (...)\u001B[0m\n\u001B[0;32m    868\u001B[0m             newline\u001B[38;5;241m=\u001B[39m\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124m\"\u001B[39m,\n\u001B[0;32m    869\u001B[0m         )\n\u001B[0;32m    870\u001B[0m     \u001B[38;5;28;01melse\u001B[39;00m:\n\u001B[0;32m    871\u001B[0m         \u001B[38;5;66;03m# Binary mode\u001B[39;00m\n\u001B[1;32m--> 872\u001B[0m         handle \u001B[38;5;241m=\u001B[39m \u001B[38;5;28mopen\u001B[39m(handle, ioargs\u001B[38;5;241m.\u001B[39mmode)\n\u001B[0;32m    873\u001B[0m     handles\u001B[38;5;241m.\u001B[39mappend(handle)\n\u001B[0;32m    875\u001B[0m \u001B[38;5;66;03m# Convert BytesIO or file objects passed with an encoding\u001B[39;00m\n",
-      "\u001B[1;31mFileNotFoundError\u001B[0m: [Errno 2] No such file or directory: 'Test Data.xlsx'"
-     ]
-    }
-   ],
-   "execution_count": 1
+   ]
   },
   {
    "cell_type": "code",
